// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when isContextualSearchPending matches snapshot, renders LoadingBarContent 1`] = `
.c0 {
  display: block;
}

.c5 {
  position: relative !important;
  margin-top: 1.0714285714285714rem;
}

.c6 {
  padding-right: 0.7142857142857143rem !important;
  padding-left: 0.7142857142857143rem !important;
  max-width: 14.285714285714286rem;
}

.c2 {
  display: inline-block;
  position: relative;
  -webkit-animation: drWeIq 750ms linear;
  animation: drWeIq 750ms linear;
  border-radius: 4px;
  background-color: rgba(47,57,65,0.1);
  width: 50%;
  height: 100%;
  overflow: hidden;
  line-height: 0.6;
}

.c2::before {
  position: absolute;
  top: 0;
  left: -1800px;
  -webkit-animation: juhHqy 1.5s ease-in-out 300ms infinite;
  animation: juhHqy 1.5s ease-in-out 300ms infinite;
  background-image: linear-gradient(45deg,transparent,rgba(255,255,255,0.6),transparent);
  width: 1000px;
  height: 100%;
  content: '';
}

.c3 {
  display: inline-block;
  position: relative;
  -webkit-animation: drWeIq 750ms linear;
  animation: drWeIq 750ms linear;
  border-radius: 4px;
  background-color: rgba(47,57,65,0.1);
  width: 100%;
  height: 100%;
  overflow: hidden;
  line-height: 0.6;
}

.c3::before {
  position: absolute;
  top: 0;
  left: -1800px;
  -webkit-animation: juhHqy 1.5s ease-in-out 300ms infinite;
  animation: juhHqy 1.5s ease-in-out 300ms infinite;
  background-image: linear-gradient(45deg,transparent,rgba(255,255,255,0.6),transparent);
  width: 1000px;
  height: 100%;
  content: '';
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  height: 0.8571428571428571rem !important;
  margin-bottom: 1.1428571428571428rem;
}

<div>
  <div
    class="container"
  >
    <div
      class="header"
      data-testid="page-header-container"
    >
      <h1
        class="title"
      >
        pageTitle
      </h1>
      <div
        class="form"
      >
        <form
          class="form"
          novalidate=""
        >
          <div
            aria-invalid="false"
            class="desktopContainer -div text__c-txt__input___38pRd text__is-focused___26DQb "
            data-garden-id="forms.faux_input"
            data-garden-version="6.4.4"
          >
            <label
              class="label text__c-txt__label___3wMPZ c0"
              data-garden-id="forms.text_label"
              data-garden-version="6.4.4"
              for="garden-field-container-2--input"
              id="garden-field-container-2--label"
            >
              How can we help?
            </label>
            <input
              aria-describedby="garden-field-container-2--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-2--label"
              autocapitalize="off"
              class="searchInput text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV "
              data-garden-id="forms.input"
              data-garden-version="6.4.4"
              data-testid="search-field"
              id="garden-field-container-2--input"
              placeholder="How can we help?"
              type="search"
              value=""
            />
            <div
              class="desktopSearchOrLoading"
            >
              <span
                class="icon focused notFocused"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
              >
                <svg
                  realfilename="search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="c1 c2"
        data-garden-id="loaders.skeleton"
        data-garden-version="6.2.0"
      >
         
      </div>
      <div
        class="c1 c3"
        data-garden-id="loaders.skeleton"
        data-garden-version="6.2.0"
      >
         
      </div>
      <div
        class="c1 c3"
        data-garden-id="loaders.skeleton"
        data-garden-version="6.2.0"
      >
         
      </div>
      <div
        class="c1 c3"
        data-garden-id="loaders.skeleton"
        data-garden-version="6.2.0"
      >
         
      </div>
      <div
        class="c1 c3"
        data-garden-id="loaders.skeleton"
        data-garden-version="6.2.0"
      >
         
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="c4"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="c5"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="c6 index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`render when not isContextualSearchPending matches snapshot, renders NoResults 1`] = `
.c0 {
  display: block;
}

.c2 {
  position: relative !important;
  margin-top: 1.0714285714285714rem;
}

.c3 {
  padding-right: 0.7142857142857143rem !important;
  padding-left: 0.7142857142857143rem !important;
  max-width: 14.285714285714286rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
  <div
    class="container"
  >
    <div
      class="header"
      data-testid="page-header-container"
    >
      <h1
        class="title"
      >
        pageTitle
      </h1>
      <div
        class="form"
      >
        <form
          class="form"
          novalidate=""
        >
          <div
            aria-invalid="false"
            class="desktopContainer -div text__c-txt__input___38pRd text__is-focused___26DQb "
            data-garden-id="forms.faux_input"
            data-garden-version="6.4.4"
          >
            <label
              class="label text__c-txt__label___3wMPZ c0"
              data-garden-id="forms.text_label"
              data-garden-version="6.4.4"
              for="garden-field-container-0--input"
              id="garden-field-container-0--label"
            >
              How can we help?
            </label>
            <input
              aria-describedby="garden-field-container-0--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-0--label"
              autocapitalize="off"
              class="searchInput text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV "
              data-garden-id="forms.input"
              data-garden-version="6.4.4"
              data-testid="search-field"
              id="garden-field-container-0--input"
              placeholder="How can we help?"
              type="search"
              value=""
            />
            <div
              class="desktopSearchOrLoading"
            >
              <span
                class="icon focused notFocused"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
              >
                <svg
                  realfilename="search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="noResults noResultsDesktop"
      >
        <p
          class="title"
        >
          There are no results for ""
        </p>
        <p
          class="noResultsParagraph noResultsParagraphDesktop"
        >
          Try searching for something else.
        </p>
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="c1"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="c2"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="c3 index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
